--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <h3>ストップウォッチ</h3>
     
     <div id="timer">0:0:0:0</div>
-    <button id="start">スタート</button>
-    <button id="stop">ストップ</button>
-    <button id="reset">リセット</button>
+    <div class="button-container">
+      <button class="button" id="start">スタート</button>
+      <button class="button" id="stop">ストップ</button>
+      <button class="button" id="reset">リセット</button>
+    </div>
 
 
     
